# LearnOpenGL-Notan

./: .gitignore  Cargo.toml  README.md
docs/: 1_1.html  1_1.js  1_1_1.html  1_1_1.js  1_1_1_bg.wasm  1_1_2.html  1_1_2.js  1_1_2_bg.wasm  1_1_bg.wasm  1_2.html  1_2.js  1_2_1.html  1_2_1.js  1_2_1_bg.wasm  1_2_2.html  1_2_2.js  1_2_2_bg.wasm  1_2_3.html  1_2_3.js  1_2_3_bg.wasm  1_2_4.html  1_2_4.js  1_2_4_bg.wasm  1_2_5.html  1_2_5.js  1_2_5_bg.wasm  1_2_bg.wasm  1_3_1.html  1_3_1.js  1_3_1_bg.wasm  1_3_2.html  1_3_2.js  1_3_2_bg.wasm  1_3_4.html  1_3_4.js  1_3_4_bg.wasm  1_3_5.html  1_3_5.js  1_3_5_bg.wasm  1_3_6.html  (+121 more)
scripts/: examples.sh  resize.sh
src/_1_getting_started/: _1_1_hello_window.rs  _1_2_hello_window_clear.rs  _2_1_hello_triangle.rs  _2_2_hello_triangle_indexed.rs  _2_3_hello_triangle_exercise1.rs  _2_4_hello_triangle_exercise2.rs  _2_5_hello_triangle_exercise3.rs  _3_1_shaders_uniform.rs  _3_2_shaders_interpolation.rs  _3_4_shaders_exercise1.rs  _3_5_shaders_exercise2.rs  _3_6_shaders_exercise3.rs  _4_1_textures.rs  _4_2_textures_combined.rs  _4_3_textures_exercise1.rs  _4_4_textures_exercise2.rs  _4_5_textures_exercise3.rs  _4_6_textures_exercise4.rs  _5_1_transformations.rs  _5_2_transformations_exercise1.rs  _5_3_transformations_exercise2.rs  _6_1_coordinate_systems.rs  _6_2_coordinate_systems_depth.rs  _6_3_coordinate_systems_multiple.rs  _6_4_coordinate_systems_exercise3.rs  _7_1_camera_circle.rs  _7_2_camera_keyboard_dt.rs  _7_3_camera_mouse_zoom.rs
src/_2_lighting/: _1_1_colors.rs  _2_1_basic_lighting_diffuse.rs  _2_2_basic_lighting_specular.rs  _2_3_basic_lighting_exercise1.rs  _2_4_basic_lighting_exercise2.rs  _2_5_basic_lighting_exercise3.rs  _3_1_materials.rs  _3_2_materials_exercise1.rs  _4_1_lighting_maps_diffuse.rs  _4_2_lighting_maps_specular.rs  _4_3_lighting_maps_exercise2.rs  _4_4_lighting_maps_exercise4.rs  _5_1_light_casters_directional.rs  _5_2_light_casters_point.rs  _5_3_light_casters_spot.rs  _5_4_light_casters_spot_soft.rs  _6_1_multiple_lights.rs
src/utils/: camera.rs
